--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,7 @@ html {
   display: flex;
 }
 .auth-nav {
-  display: block;
+  display: flex;
   align-items: center;
   margin-left: auto;
   margin-right: auto;
@@ -183,6 +183,7 @@ html {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--second-title-color);
+  display: flex;
 }
 
 .auth-nav .link:hover,
@@ -196,6 +197,11 @@ html {
 
 .auth-nav .item + .item {
   margin-left: 50px;
+}
+
+.auth-symbol {
+  fill: currentColor;
+  margin-right: 10px;
 }
 
 .auth-symbol:hover,
@@ -237,6 +243,8 @@ html {
   background-position: center;
   background-size: cover;
   max-width: 1600px;
+  height: 600px;
+  margin: 0 auto;
 }
 
 .btn {
@@ -289,17 +297,14 @@ html {
 }
 
 .benefits-block {
-  display: block;
-  content: '';
   height: 120px;
-  width: calc((1200px - 150px) / 4);
-  background-repeat: no-repeat;
-  background-position: center;
+  width: 270px;
   background-color: #f5f4fa;
   margin-bottom: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 4px;
 }
 
 .benefits-title {
@@ -389,20 +394,17 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
+  color: #afb1b8;
 }
 
 .team-soc-link:hover,
 .team-soc-link:focus {
   background-color: var(--main-link-color);
+  color: #ffffff;
 }
 
 .team-soc-icon {
-  fill: #afb1b8;
-}
-
-.team-soc-link:hover .team-soc-icon,
-.team-soc-link:focus .team-soc-icon {
-  fill: #ffffff;
+  fill: currentColor;
 }
 
 .team-person {
@@ -416,8 +418,7 @@ html {
 
 /* ----------------Постійні клієнти---------------- */
 .clients {
-  margin-top: 50px;
-  margin-bottom: 94px;
+  padding: 94px 0;
 }
 .clients-list {
   display: flex;
@@ -427,21 +428,19 @@ html {
 .clients-item {
   width: calc((1200px - 180px) / 6);
   height: 92px;
-  border: 1px solid #afb1b8;
-  border-radius: 5px;
 }
 .clients-link {
   width: 100%;
   height: 100%;
-  background: #ffffff;
   fill: #afb1b8;
-  border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  border: 1px solid #afb1b8;
+  border-radius: 5px;
 }
 
-.clients-item:hover {
+.clients-link:hover {
   border-color: var(--main-link-color);
 }
 
@@ -471,6 +470,11 @@ html {
   width: 370px;
 }
 
+.flex-element:hover,
+.flex-element:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -514,16 +518,17 @@ html {
   padding: 60px 0;
 }
 
-.footer-div {
-}
 .conteiner-div {
   margin-left: auto;
   margin-right: auto;
   padding: 0 15px;
   width: 1200px;
-  display: flex;
 }
 
+.footer .container {
+  display: flex;
+  align-items: baseline;
+}
 .conteiner-logo {
   margin-right: 70px;
 }
@@ -574,6 +579,8 @@ html {
 .portfolio-btn:focus {
   color: #ffffff;
   background-color: #2196f3;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-adress {
